<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unifreelancer.masso.sounddetection.Setting"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtVoiceDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtHumanDecibel"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/txtMinDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMinHumanDecibel"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />


    <EditText
        android:id="@+id/minDb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edtminHumanDB"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="47dp" />


    <TextView
        android:id="@+id/txtMaxDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMaxHumanDecibel"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/maxDb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edtmaxHumanDB"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="47dp" />

    <Button
        android:id="@+id/btnSaveUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdate"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="78dp" />

</LinearLayout>
