<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context="com.unifreelancer.masso.sounddetection.AnalysisSpeechActivity">

    <ToggleButton
        android:id="@+id/btnRecord"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/record"
        android:textOff="START RECORD"
        android:textOn="STOP RECORD"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSetting" />


    <Button
        android:id="@+id/btnAnalyze"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_purple"
        android:text="@string/analyze"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRecord" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/save"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnalyze" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/exit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSave" />

    <ProgressBar
        android:id="@+id/progressdB"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="371dp"
        android:layout_height="20dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAnalyze" />

    <TextView
        android:id="@+id/outDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="200dp"
        android:layout_marginTop="16dp"
        android:text="@string/dB"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressdB" />

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="100dp"
        android:text="@string/score"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/outScore"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/avrSpeech"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/outAvSpeech"
        app:layout_constraintTop_toBottomOf="@+id/txtScore" />

    <TextView
        android:id="@+id/txtAnalyze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/speDuration"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/outDuration"
        app:layout_constraintTop_toBottomOf="@+id/txtSave" />

    <TextView
        android:id="@+id/outScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="31dp"
        android:text="Null"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@drawable/back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/outAvSpeech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="31dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:text="Null"
        android:background="@drawable/back"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outScore" />

    <TextView
        android:id="@+id/outDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="31dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:text="Null"
        android:background="@drawable/back"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outAvSpeech" />

    <TextView
        android:id="@+id/outDate"
        android:layout_width="86dp"
        android:layout_height="21dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:textColor="@android:color/white"
        android:text="Date"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSetting"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/action_settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
